Fix header and about-me section HTML layout and max-width css property issue raised during morning session.

--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="header-wrapper container">
-      <header class="toolbar">
-        <div class="container flex-container">
-          <div class="logo">
-            <a href="./index.html" class="logo-link">TG</a>
-          </div>
-          <nav class="nav-menu">
-            <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
-          </nav>
+    <header class="toolbar">
+      <div class="container flex-container">
+        <div class="logo">
+          <a href="./index.html" class="logo-link">TG</a>
         </div>
-      </header>
-      <section class="headline">
+        <nav class="nav-menu">
+          <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
+        </nav>
+      </div>
+    </header>
+
+    <section class="headline">
+      <div class="wrapper">
         <div class="container flex-container">
           <h1 class="headline--title">I’m Tekle</h1>
           <h2 class="headline--title subtitle">Glad to see you!</h2>
@@ -79,8 +80,8 @@
             </li>
           </ul>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
 
     <section class="works">
       <div class="container grid-container">
@@ -92,26 +93,30 @@
               alt="tonic project snapshoot"
             />
           </div>
-          <h3 class="project-title">Tonic</h3>
-          <ul class="project-metadata">
-            <li class="client">Client</li>
-            <li><span class="counter"></span></li>
-            <li class="role">Role</li>
-            <li><span class="counter"></span></li>
-            <li class="year">Year</li>
-          </ul>
-          <p class="project-description">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
-            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
-            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
-            expedita.
-          </p>
-          <ul class="languages">
-            <li><span>HTML</span></li>
-            <li><span>CSS</span></li>
-            <li><span>JavaScript</span></li>
-          </ul>
-          <button class="btn btn-see-project" type="button">See Project</button>
+          <div class="project-detail">
+            <h3 class="project-title">Tonic</h3>
+            <ul class="project-metadata">
+              <li class="client">Client</li>
+              <li><span class="counter"></span></li>
+              <li class="role">Role</li>
+              <li><span class="counter"></span></li>
+              <li class="year">Year</li>
+            </ul>
+            <p class="project-description">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
+              rerum unde officiis alias amet optio enim nisi? Magni possimus
+              rerum optio fuga expedita.
+            </p>
+            <ul class="languages">
+              <li><span>HTML</span></li>
+              <li><span>CSS</span></li>
+              <li><span>JavaScript</span></li>
+            </ul>
+            <button class="btn btn-see-project" type="button">
+              See Project
+            </button>
+          </div>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -120,26 +125,30 @@
               alt="multi-post stories project snapshoot"
             />
           </div>
-          <h3 class="project-title">Multi-post stories</h3>
-          <ul class="project-metadata">
-            <li class="client">Client</li>
-            <li><span class="counter"></span></li>
-            <li class="role">Role</li>
-            <li><span class="counter"></span></li>
-            <li class="year">Year</li>
-          </ul>
-          <p class="project-description">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
-            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
-            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
-            expedita.
-          </p>
-          <ul class="languages">
-            <li><span>HTML</span></li>
-            <li><span>CSS</span></li>
-            <li><span>JavaScript</span></li>
-          </ul>
-          <button class="btn btn-see-project" type="button">See Project</button>
+          <div class="project-detail">
+            <h3 class="project-title">Multi-post stories</h3>
+            <ul class="project-metadata">
+              <li class="client">Client</li>
+              <li><span class="counter"></span></li>
+              <li class="role">Role</li>
+              <li><span class="counter"></span></li>
+              <li class="year">Year</li>
+            </ul>
+            <p class="project-description">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
+              rerum unde officiis alias amet optio enim nisi? Magni possimus
+              rerum optio fuga expedita.
+            </p>
+            <ul class="languages">
+              <li><span>HTML</span></li>
+              <li><span>CSS</span></li>
+              <li><span>JavaScript</span></li>
+            </ul>
+            <button class="btn btn-see-project" type="button">
+              See Project
+            </button>
+          </div>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -148,26 +157,30 @@
               alt="tonic project two snapshoot"
             />
           </div>
-          <h3 class="project-title">Tonic</h3>
-          <ul class="project-metadata">
-            <li class="client">Client</li>
-            <li><span class="counter"></span></li>
-            <li class="role">Role</li>
-            <li><span class="counter"></span></li>
-            <li class="year">Year</li>
-          </ul>
-          <p class="project-description">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
-            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
-            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
-            expedita.
-          </p>
-          <ul class="languages">
-            <li><span>HTML</span></li>
-            <li><span>CSS</span></li>
-            <li><span>JavaScript</span></li>
-          </ul>
-          <button class="btn btn-see-project" type="button">See Project</button>
+          <div class="project-detail">
+            <h3 class="project-title">Tonic</h3>
+            <ul class="project-metadata">
+              <li class="client">Client</li>
+              <li><span class="counter"></span></li>
+              <li class="role">Role</li>
+              <li><span class="counter"></span></li>
+              <li class="year">Year</li>
+            </ul>
+            <p class="project-description">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
+              rerum unde officiis alias amet optio enim nisi? Magni possimus
+              rerum optio fuga expedita.
+            </p>
+            <ul class="languages">
+              <li><span>HTML</span></li>
+              <li><span>CSS</span></li>
+              <li><span>JavaScript</span></li>
+            </ul>
+            <button class="btn btn-see-project" type="button">
+              See Project
+            </button>
+          </div>
         </article>
         <article class="card">
           <div class="project-snapshoot">
@@ -176,26 +189,30 @@
               alt="multi-post stories project two snapshoot"
             />
           </div>
-          <h3 class="project-title">Multi-post stories</h3>
-          <ul class="project-metadata">
-            <li class="client">Client</li>
-            <li><span class="counter"></span></li>
-            <li class="role">Role</li>
-            <li><span class="counter"></span></li>
-            <li class="year">Year</li>
-          </ul>
-          <p class="project-description">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium
-            voluptate, illo, iure est voluptas corrupti tenetur, rerum unde
-            officiis alias amet optio enim nisi? Magni possimus rerum optio fuga
-            expedita.
-          </p>
-          <ul class="languages">
-            <li><span>HTML</span></li>
-            <li><span>CSS</span></li>
-            <li><span>JavaScript</span></li>
-          </ul>
-          <button class="btn btn-see-project" type="button">See Project</button>
+          <div class="project-detail">
+            <h3 class="project-title">Multi-post stories</h3>
+            <ul class="project-metadata">
+              <li class="client">Client</li>
+              <li><span class="counter"></span></li>
+              <li class="role">Role</li>
+              <li><span class="counter"></span></li>
+              <li class="year">Year</li>
+            </ul>
+            <p class="project-description">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Laudantium voluptate, illo, iure est voluptas corrupti tenetur,
+              rerum unde officiis alias amet optio enim nisi? Magni possimus
+              rerum optio fuga expedita.
+            </p>
+            <ul class="languages">
+              <li><span>HTML</span></li>
+              <li><span>CSS</span></li>
+              <li><span>JavaScript</span></li>
+            </ul>
+            <button class="btn btn-see-project" type="button">
+              See Project
+            </button>
+          </div>
         </article>
       </div>
     </section>
@@ -203,104 +220,108 @@
     <section class="about-me">
       <div class="about-me-wrapper container">
         <div class="about-me-container">
-          <h2 class="about-me-title">
-            About <br />
-            Myself
-          </h2>
-          <p class="about-me-body">
-            Hello I’m a software developer! I can help you build a product ,
-            feature or website Look through some of my work and experience! If
-            you like what you see and have a project you need coded, don’t
-            hestiate to contact me.
-          </p>
-          <p class="about-me-suporting-text">Let's connect</p>
-          <ul class="social-media">
-            <li class="social-meida__list-item">
-              <a
-                href="https://twitter.com/teklegyohannes"
-                class="social-media-items twitter-link"
-              >
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a
-                href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
-                class="social-media-items linkedin-link"
-              >
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="#" class="social-media-items medium-link">
-                <i class="fab fa-medium-m"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a
-                href="https://github.com/gtekle"
-                class="social-media-items github-link"
-              >
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="#" class="social-media-items angelist-link">
-                <i class="fab fa-angellist"></i>
-              </a>
-            </li>
-          </ul>
-          <button class="btn btn-get-my-resume" type="button">
-            Get my resume
-          </button>
-          <div class="programming-languages">
-            <div class="language-head">
-              <h3 class="languages-title">Languages</h3>
-              <a href="#"><i class="fas fa-angle-down"></i></a>
-            </div>
-            <ul class="language-list">
-              <li>
-                <div class="language-item">
-                  <div class="language-icon">
-                    <img
-                      src="./img/icons/javascript-icon.png"
-                      alt="CSS3 icon"
-                    />
-                  </div>
-                  <p class="language-name">JavaScript</p>
-                </div>
+          <div class="about-me-header">
+            <h2 class="about-me-title">
+              About <br />
+              Myself
+            </h2>
+            <p class="about-me-body">
+              Hello I’m a software developer! I can help you build a product ,
+              feature or website Look through some of my work and experience! If
+              you like what you see and have a project you need coded, don’t
+              hestiate to contact me.
+            </p>
+            <p class="about-me-suporting-text">Let's connect</p>
+            <ul class="social-media">
+              <li class="social-meida__list-item">
+                <a
+                  href="https://twitter.com/teklegyohannes"
+                  class="social-media-items twitter-link"
+                >
+                  <i class="fab fa-twitter"></i>
+                </a>
               </li>
-              <li>
-                <div class="language-item">
-                  <div class="language-icon">
-                    <img src="./img/icons/html5-icon.png" alt="CSS3 icon" />
-                  </div>
-                  <p class="language-name">HTML</p>
-                </div>
+              <li class="social-meida__list-item">
+                <a
+                  href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
+                  class="social-media-items linkedin-link"
+                >
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
               </li>
-              <li>
-                <div class="language-item">
-                  <div class="language-icon">
-                    <img src="./img/icons/css3-icon.png" alt="CSS3 icon" />
-                  </div>
-                  <p class="language-name">CSS</p>
-                </div>
+              <li class="social-meida__list-item">
+                <a href="#" class="social-media-items medium-link">
+                  <i class="fab fa-medium-m"></i>
+                </a>
+              </li>
+              <li class="social-meida__list-item">
+                <a
+                  href="https://github.com/gtekle"
+                  class="social-media-items github-link"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="social-meida__list-item">
+                <a href="#" class="social-media-items angelist-link">
+                  <i class="fab fa-angellist"></i>
+                </a>
               </li>
             </ul>
+            <button class="btn btn-get-my-resume" type="button">
+              Get my resume
+            </button>
           </div>
-          <div class="frameworks">
-            <div class="frameworks-head">
-              <h3 class="frameworks-title">Frameworks</h3>
-              <a href="#"><i class="fas fa-angle-right"></i></a>
+          <div class="about-me-skillset">
+            <div class="programming-languages">
+              <div class="language-head">
+                <h3 class="languages-title">Languages</h3>
+                <a href="#"><i class="fas fa-angle-down"></i></a>
+              </div>
+              <ul class="language-list">
+                <li>
+                  <div class="language-item">
+                    <div class="language-icon">
+                      <img
+                        src="./img/icons/javascript-icon.png"
+                        alt="CSS3 icon"
+                      />
+                    </div>
+                    <p class="language-name">JavaScript</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="language-item">
+                    <div class="language-icon">
+                      <img src="./img/icons/html5-icon.png" alt="CSS3 icon" />
+                    </div>
+                    <p class="language-name">HTML</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="language-item">
+                    <div class="language-icon">
+                      <img src="./img/icons/css3-icon.png" alt="CSS3 icon" />
+                    </div>
+                    <p class="language-name">CSS</p>
+                  </div>
+                </li>
+              </ul>
             </div>
-            <hr />
-          </div>
-          <div class="skills">
-            <div class="skills-head">
-              <h3 class="skills-title">Skills</h3>
-              <a href="#"><i class="fas fa-angle-right"></i></a>
+            <div class="frameworks">
+              <div class="frameworks-head">
+                <h3 class="frameworks-title">Frameworks</h3>
+                <a href="#"><i class="fas fa-angle-right"></i></a>
+              </div>
+              <hr />
             </div>
-            <hr />
+            <div class="skills">
+              <div class="skills-head">
+                <h3 class="skills-title">Skills</h3>
+                <a href="#"><i class="fas fa-angle-right"></i></a>
+              </div>
+              <hr />
+            </div>
           </div>
         </div>
       </div>
