Add contact-me form HTML skeleton in the footer section

--- a/index.html
+++ b/index.html
@@ -326,5 +326,31 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="contact-me">
+        <form action="#" method="post">
+          <ul>
+            <li>
+              <input placeholder="name" type="text" id="name" name="name" />
+            </li>
+            <li>
+              <input placeholder="email" type="email" name="email" id="email" />
+            </li>
+            <li>
+              <textarea
+                placeholder="please enter your message here..."
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </li>
+            <li>
+              <button type="submit">Get In Touch</button>
+            </li>
+          </ul>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
