Add styles on the contact form

--- a/index.html
+++ b/index.html
@@ -328,8 +328,14 @@
     </section>
     <footer class="footer">
       <div class="contact-me">
+        <div class="contact-me-header">
+          <h2 class="section-title">Contact me</h2>
+          <p class="contact-description">
+            If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it 
+          </p>
+        </div>
         <form action="#" method="post">
-          <ul>
+          <ul class="input-list">
             <li>
               <input placeholder="name" type="text" id="name" name="name" />
             </li>
@@ -346,7 +352,7 @@
               ></textarea>
             </li>
             <li>
-              <button type="submit">Get In Touch</button>
+              <button class="btn" type="submit">Get In Touch</button>
             </li>
           </ul>
         </form>
