Add desktop version header section's style and refactor header HTML layout

--- a/index.html
+++ b/index.html
@@ -20,68 +20,75 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header class="toolbar">
-      <div class="container flex-container">
-        <div class="logo">
-          <a href="./index.html" class="logo-link">TG</a>
+    <header class="header">
+      <div class="toolbar">
+        <div class="container flex-container">
+          <div class="logo">
+            <a href="./index.html" class="logo-link">TG</a>
+          </div>
+          <nav class="nav-menu">
+            <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
+            <ul class="nav-list">
+              <li class="nav-link"><a href="#">Portfolio</a></li>
+              <li class="nav-link"><a href="#">About</a></li>
+              <li class="nav-link"><a href="#">Contact</a></li>
+            </ul>
+          </nav>
         </div>
-        <nav class="nav-menu">
-          <a href="#" class="btn-menu-toggle"><i class="fas fa-bars"></i></a>
-        </nav>
+      </div>
+
+      <div class="headline flex-container">
+        <h1 class="headline--title headline--container">
+          I’m Tekle<br />
+          Glad to see you!
+        </h1>
+        <p class="headline--body headline--container">
+          I’m a software developer! I can help you build a product , feature or
+          website Look through some of my work and experience! If you like what
+          you see and have a project you need coded, don’t hestiate to contact
+          me.
+        </p>
+        <h3 class="headline--supporting-text headline--container">
+          Let's connect
+        </h3>
+        <ul class="social-media headline--container">
+          <li class="social-meida__list-item">
+            <a
+              href="https://twitter.com/teklegyohannes"
+              class="social-media-items twitter-link"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a
+              href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
+              class="social-media-items linkedin-link"
+            >
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="#" class="social-media-items medium-link">
+              <i class="fab fa-medium-m"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a
+              href="https://github.com/gtekle"
+              class="social-media-items github-link"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="social-meida__list-item">
+            <a href="#" class="social-media-items angelist-link">
+              <i class="fab fa-angellist"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
-
-    <section class="headline">
-      <div class="wrapper">
-        <div class="container flex-container">
-          <h1 class="headline--title">I’m Tekle</h1>
-          <h2 class="headline--title subtitle">Glad to see you!</h2>
-          <p class="headline--body">
-            I’m a software developer! I can help you build a product , feature
-            or website Look through some of my work and experience! If you like
-            what you see and have a project you need coded, don’t hestiate to
-            contact me.
-          </p>
-          <h3 class="headline--supporting-text">Let's connect</h3>
-          <ul class="social-media">
-            <li class="social-meida__list-item">
-              <a
-                href="https://twitter.com/teklegyohannes"
-                class="social-media-items twitter-link"
-              >
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a
-                href="https://www.linkedin.com/in/tekle-gebreyohannes-kidanemariam-7605752b"
-                class="social-media-items linkedin-link"
-              >
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="#" class="social-media-items medium-link">
-                <i class="fab fa-medium-m"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a
-                href="https://github.com/gtekle"
-                class="social-media-items github-link"
-              >
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li class="social-meida__list-item">
-              <a href="#" class="social-media-items angelist-link">
-                <i class="fab fa-angellist"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
 
     <section class="works">
       <div class="container grid-container">
