Add navigation links' href to point to respective sections

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 ><i class="fas fa-bars"></i
               ></a>
               <ul class="nav-list">
-                <li class="nav-link"><a href="#">Portfolio</a></li>
-                <li class="nav-link"><a href="#">About</a></li>
-                <li class="nav-link"><a href="#">Contact</a></li>
+                <li class="nav-link"><a href="#works">Portfolio</a></li>
+                <li class="nav-link"><a href="#about-me">About</a></li>
+                <li class="nav-link"><a href="#contact-me">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -93,7 +93,7 @@
       </div>
     </header>
 
-    <section class="works">
+    <section id="works" class="works">
       <div class="container grid-container">
         <h2 class="section-title">Projects</h2>
         <article class="card">
@@ -227,7 +227,7 @@
       </div>
     </section>
 
-    <section class="about-me">
+    <section id="about-me" class="about-me">
       <div class="about-me-wrapper container">
         <div class="about-me-container">
           <div class="about-me-header">
@@ -339,7 +339,7 @@
 
     <footer class="footer">
       <div class="wrapper">
-        <div class="contact-me container">
+        <div id="contact-me" class="contact-me container">
           <div class="contact-me-header">
             <h2 class="contact-title headline--container">Contact me</h2>
             <p class="contact-intro headline--container">
