Add accordion class to skillset list in the about-me section

--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
             </button>
           </div>
           <div class="about-me-skillset">
-            <div class="programming-languages">
+            <div class="programming-languages accordion">
               <div class="language-head">
                 <h3 class="languages-title">Languages</h3>
                 <a href="#"><i class="fas fa-angle-down"></i></a>
               </div>
-              <ul class="language-list">
+              <ul class="language-list" id="language-list">
                 <li>
                   <div class="language-item">
                     <div class="language-icon">
@@ -318,14 +318,14 @@
                 </li>
               </ul>
             </div>
-            <div class="frameworks">
+            <div class="frameworks accordion">
               <div class="frameworks-head">
                 <h3 class="frameworks-title">Frameworks</h3>
                 <a href="#"><i class="fas fa-angle-right"></i></a>
               </div>
               <hr />
             </div>
-            <div class="skills">
+            <div class="skills accordion">
               <div class="skills-head">
                 <h3 class="skills-title">Skills</h3>
                 <a href="#"><i class="fas fa-angle-right"></i></a>
