Add add rotation tansfor on the logo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="toolbar">
           <div class="container flex-container">
             <div class="logo">
+              <div class="rotate-arround-logo"></div>
               <a href="./index.html" class="logo-link">TG</a>
             </div>
             <nav class="nav-menu">
