Add bounce animations on Let's connect

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             what you see and have a project you need coded, don’t hestiate to
             contact me.
           </p>
-          <h3 class="headline--supporting-text headline--container">
+          <h3 class="headline--supporting-text headline--container bounce">
             Let's connect
           </h3>
           <ul class="social-media headline--container">
@@ -242,7 +242,7 @@
               you like what you see and have a project you need coded, don’t
               hestiate to contact me.
             </p>
-            <p class="about-me-suporting-text">Let's connect</p>
+            <p class="about-me-suporting-text bounce">Let's connect</p>
             <ul class="social-media">
               <li class="social-meida__list-item">
                 <a
