Add eslint linter

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
               <a href="./index.html" class="logo-link">TG</a>
             </div>
             <nav class="nav-menu">
-              <a href="#" class="btn-menu-toggle"
-                ><i class="fas fa-bars"></i
-              ></a>
+              <a href="#" class="btn-menu-toggle">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-times"></i>
+              </a>
               <ul class="nav-list">
                 <li class="nav-link"><a href="#works">Portfolio</a></li>
                 <li class="nav-link"><a href="#about-me">About</a></li>
