Add mobile menu list

--- a/index.html
+++ b/index.html
@@ -45,12 +45,23 @@
             <nav class="nav-menu">
               <a href="#" class="btn-menu-toggle">
                 <i class="fas fa-bars"></i>
-                <i class="fas fa-times"></i>
               </a>
               <ul class="nav-list">
                 <li class="nav-link"><a href="#works">Portfolio</a></li>
                 <li class="nav-link"><a href="#about-me">About</a></li>
                 <li class="nav-link"><a href="#contact-me">Contact</a></li>
+              </ul>
+            </nav>
+            <nav class="mobile-nav-menu">
+              <a href="#" class="btn-menu-close">
+                <i class="fas fa-times"></i>
+              </a>
+              <ul class="mobile-nav-list">
+                <li class="mobile-nav-link"><a href="#works">Portfolio</a></li>
+                <li class="mobile-nav-link"><a href="#about-me">About</a></li>
+                <li class="mobile-nav-link">
+                  <a href="#contact-me">Contact</a>
+                </li>
               </ul>
             </nav>
           </div>
