Add comment to nav bar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       function gtag() {
         window.dataLayer.push(arguments);
       }
-      gtag("js", new Date());
-      gtag("config", "G-S9F42FW2CY");
+      gtag('js', new Date());
+      gtag('config', 'G-S9F42FW2CY');
     </script>
     <link
       rel="stylesheet"
@@ -41,6 +41,7 @@
               <div class="rotate-arround-logo"></div>
               <a href="./index.html" class="logo-link">TG</a>
             </div>
+            <!-- Desktop nav -->
             <nav class="nav-menu">
               <a href="#" class="btn-menu-toggle">
                 <i class="fas fa-bars"></i>
@@ -51,6 +52,7 @@
                 <li class="nav-link"><a href="#contact-me">Contact</a></li>
               </ul>
             </nav>
+            <!-- mobile nav -->
             <nav class="mobile-nav-menu">
               <a href="#" class="btn-menu-close">
                 <i class="fas fa-times"></i>
